--- a/Missions_to_Mars/index.html
+++ b/Missions_to_Mars/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+
+</head>
+
 <table border="1" class="dataframe">
     <thead>
       <tr style="text-align: right;">
@@ -54,3 +60,5 @@
       </tr>
     </tbody>
   </table>
+
+  </html>
